    on subclasses of eg. STREAM no longer cause compiler notes to appear.
  * bug fix: ADJUST-ARRAY on multidimensional arrays used bogusly give
    them a fill pointer unless :DISPLACED-TO or :INITIAL-CONTENTS were
    provided. (reported by Cedric St-Jean)
  * bug fix: circularity handling in the reader did not treat raw
    structure slots correctly. (reported by Cedric St-Jean)

changes in sbcl-1.0.21 relative to 1.0.20:
  * new feature: the compiler is able to track the effective type of a
    generic function across method addition and removal.
  * new feature: SB-EXT:ATOMIC-INCF allows atomic incrementation of
    appropriately typed structure slots without locking.
  * new feature: SB-EXT:CALL-WITH-TIMING provides access to timing
    information like those gathered by TIME using a programming-friendly
    interface.
  * new feature: TIME reports time taken even if the form performs a
    non-local transfer of control.
  * enhancement: reduced conservativism on GENCGC platforms: on
    average 45% less pages pinned (measured from SBCL self build).
  * bug fix: SB-EXT:COMPARE-AND-SWAP on SYMBOL-VALUE can no longer
    mutate constant symbols or violate declaimed type of the symbol.
  * bug fix: SB-THREAD:SIGNAL-SEMAPHORE could fail to wakeup threads
    sleeping on the semaphore in heavily contested semaphores.
  * bug fix: semaphores and condition variables were not interrupt
    safe.
  * bug fix: SB-THREAD:CONDITION-WAIT doesn't allow waits on mutexes
    owned by other threads anymore.
  * bug fix: FIND on lists called KEY outside the specified
    subsequence. (reported by budden)
  * bug fix: LOG doesn't use single-float intermediate results when
    given mixed integer and double-float arguments, leading to better
    precision. (reported by Bob Felts)
  * bug fix: LOG with base zero returned values of inconsistent type.

changes in sbcl-1.0.20 relative to 1.0.19:
  * minor incompatible change: OPTIMIZE qualities